[project]
name = "hel-dog-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.11.1",
    "bcrypt==4.2",
    "fastapi[standard]>=0.118",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyfcm>=2.1.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = []
